# BulkAudioExtractTool

./: .flake8  .gitignore  .pre-commit-config.yaml  .rich-codex.yml  CHANGELOG.md  README.md  clean_files.sh  main.py  mypy.ini  package.json  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  python-publish.yml
BAET/: AppArgs.py  AudioExtractor.py  Console.py  Theme.py  Types.py
bundles/: new_bundle.sh
src/: main.py
src/BAET/: AppArgs.py  AudioExtractor.py  Console.py  Logging.py  Types.py  __init__.py  __main__.py  _aliases.py  _console.py  _constants.py  _logging.py  _metadata.py  _theme.py  _types.py  app_args.py  constants.py  extract.py  job_progress.py  jobs.py  progress_list.py  progress_status.py  progress_style.py  typing.py
src/BAET/Display/: job_progress.py  progress_style.py
src/BAET/FFmpeg/: extract.py  jobs.py
src/BAET/FFmpegExtract/: Aliases.py  CommandBuilder.py  Constants.py  Extractor.py  FFmpegProcess.py  FFmpegWorker.py  Job.py  Jobs.py  Progress.py  __init__.py
src/BAET/Helpers/: Printing.py
src/BAET/_config/: console.py  logging.py
src/BAET/cli/: cli.py  command_args.py  help_configuration.py  types.py
src/BAET/cli/commands/: __init__.py  extract.py  probe.py
src/BAET/cli/validation/: file_validation.py
src/BAET/debug/: __main__.py
src/BAET/helpers/: string_helpers.py  time_conversion.py
src/BAET/tests/fakes/: path.py
src/app/: main.py
tests/: __init__.py  progress_style_test.py  test_progress_style.py
